# passe-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  all.gup  shell.nix
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  lib.rs  main.rs  password.rs
common/: Cargo.toml
common/src/: auth.rs  config.rs
core/: Cargo.toml
core/build-vars/: inputs
core/src/: config.rs  domain_extractor.rs  domain_list.rs  lib.rs  password.rs
deploy/: Dockerfile  deploy.sh
gup/: Gupfile  inputs.sh
gup/build-vars/: target.gup
server/: Cargo.toml  all.gup
server/src/: auth.rs  db.rs  error.rs  main.rs  request.rs  server.rs  storage.rs
ui/: Cargo.toml  all.gup  deno.json  index.html  release.gup  rollup.config.js  tsconfig.json
ui/gup/public/: bundle.gup  bundle.js.gup
ui/public/: index.html  style.css
ui/src/: App.svelte  Authentication.ts  Db.ts  DomainConfig.svelte  PasswordForm.svelte  State.ts  SyncWidget.svelte  User.ts  UserForm.svelte  UserPanel.svelte  lib.rs  main.ts  password_form.rs  serviceWorker.ts  util.ts
ui/static/: tailwind.css.gup
wasm/: Cargo.toml  Makefile.toml  all.gup  public.gup  tailwind.config.js
wasm/gup/build-vars/: inputs.gup
wasm/src/: wasm.rs
web/: Cargo.toml  Makefile.toml  dev.gup  public.gup
web/gup/build-vars/: target.gup
web/src/: lib.rs
web/static/: index.html
