[package]
name = "passe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "passe"

[dependencies]
passe-core = { path = "../core" }
clap = { version = "3.2" }
rpassword = "7.0"
rprompt = "1"
ureq = { version = "2", features = ["json"] }

# from core
anyhow = "*"
log = "*"
shellexpand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
