[package]
name = "passe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "passe"
path = "src/cli.rs"

[dependencies]
passe-core = { path = "../core" }
clap = { version = "4.6" }
rpassword = "7.5"
rprompt = "2"
ureq = { version = "3", features = ["json"] }
env_logger = "0.11.10"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }

# from core
anyhow = "*"
log = "*"
shellexpand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
