[package]
name = "passe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
passe-core = { path = "../core" }

bcrypt-pbkdf = "0.9"
rand = "0.8"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# from core
anyhow = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shellexpand = "*"
base64 = "*"
