[package]
name = "passe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
passe-core = { path = "../core" }

bcrypt-pbkdf = "0.11"
rand = "0.10"
rocket = { version = "0.5.1", features = ["json"] }
env_logger = "0.11.10"

# from core
anyhow = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shellexpand = "*"
base64 = "*"
