[package]
name = "passe-web"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[lib]
crate-type = ["cdylib"]

[dependencies]
passe-core = { path = "../core" }

[build-dependencies]
wasm-bindgen = "*"
